--- a/IndustryCompass.html
+++ b/IndustryCompass.html
@@ -305,8 +305,8 @@
           <!-- A .qvplaceholder will become a droppable area in the dev-hub -->
           <!-- Each .qvplaceholder must have a unique id -->
           <!-- These .qvplaceholder objects below have an extra class, .kpi, which applies some simple styles intended for kpi objects -->
-          <div class="row" style="width: 80%">
-            <div class="col-xs-12 col-md-2">
+          <div class="row">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-1-1" class="qvobject" style="height: 35px; padding: 0px"></div>
@@ -318,7 +318,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-1-2" class="qvobject" style="height: 35px; width: 100%; padding: 0px"></div>
@@ -330,7 +330,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-1-3" class="qvobject" style="height: 35px; width: 100%; padding: 0px"></div>
@@ -342,7 +342,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-1-4" class="qvobject" style="height: 35px; width: 100%; padding: 0px"></div>
@@ -355,7 +355,7 @@
               </div>
             </div>
             <div class="col-xs-12 col-md-2 col-lg-1 filter-container" >
-			<div class="row">
+			        <div class="row">
                 <div class="col-xs-12 filter">
                   <div id="QV-clear-1" class="qvobject" style="height: 35px"></div>
                 </div>
@@ -719,8 +719,8 @@
           <!-- A .qvplaceholder will become a droppable area in the dev-hub -->
           <!-- Each .qvplaceholder must have a unique id -->
           <!-- These .qvplaceholder objects below have an extra class, .kpi, which applies some simple styles intended for kpi objects -->
-          <div class="row" style="width: 80%; margin-bottom: 0px">
-            <div class="col-xs-12 col-md-2" style="height: 100%">
+          <div class="row" style="margin-bottom: 0px">
+            <div class="col-xs-4 col-md-2" style="height: 100%">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-2-1" class="with-title qvobject" style="height: 35px"></div>
@@ -732,7 +732,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2" style="height: 100%">
+            <div class="col-xs-4 col-md-2" style="height: 100%">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-2-2" class="qvobject" style="width: 100%; height: 35px"></div>
@@ -744,7 +744,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2" style="height: 100%">
+            <div class="col-xs-4 col-md-2" style="height: 100%">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-2-3" class="qvobject" style="width: 100%; height: 35px"></div>
@@ -756,7 +756,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2" style="height: 100%">
+            <div class="col-xs-4 col-md-2" style="height: 100%">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-2-4" class="qvobject" style="width: 100%; height: 35px"></div>
@@ -768,7 +768,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2" style="height: 100%">
+            <div class="col-xs-4 col-md-2" style="height: 100%">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-2-4a" class="qvplaceholder" style="width: 100%; height: 35px"></div>
@@ -1075,7 +1075,7 @@
                         style="
                           position: relative;
                           bottom: 0px;
-                          padding: 0px 5px 0px 186px;
+                          padding: 0px 24px 0px 169px;
                         "
                       >
                         <div class="my-legend" style="padding-top: 4px">
@@ -1194,8 +1194,8 @@
           <!-- A .qvplaceholder will become a droppable area in the dev-hub -->
           <!-- Each .qvplaceholder must have a unique id -->
           <!-- These .qvplaceholder objects below have an extra class, .kpi, which applies some simple styles intended for kpi objects -->
-          <div class="row" style="width: 80%; margin-bottom: 0px">
-            <div class="col-xs-12 col-md-2">
+          <div class="row" style="margin-bottom: 0px">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-3-1" class="with-title qvobject" style="height: 35px"></div>
@@ -1207,7 +1207,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-3-2" class="qvobject" style="width: 100%; height: 35px"></div>
@@ -1219,7 +1219,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-3-3" class="qvobject" style="width: 100%; height: 35px"></div>
@@ -1231,7 +1231,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-3-4" class="qvobject" style="width: 100%; height: 35px"></div>
@@ -1243,7 +1243,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-3-4a" class="qvplaceholder" style="width: 100%; height: 35px"></div>
@@ -1528,8 +1528,8 @@
           <!-- A .qvplaceholder will become a droppable area in the dev-hub -->
           <!-- Each .qvplaceholder must have a unique id -->
           <!-- These .qvplaceholder objects below have an extra class, .kpi, which applies some simple styles intended for kpi objects -->
-          <div class="row" style="width: 80%; margin-bottom: 0px">
-            <div class="col-xs-12 col-md-2">
+          <div class="row" style="margin-bottom: 0px">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-4-1" class="with-title qvobject" style="height: 35px"></div>
@@ -1541,7 +1541,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-4-4a" class="qvobject" style="width: 100%; height: 35px"></div>
@@ -1553,7 +1553,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-4-2" class="qvobject" style="width: 100%; height: 35px"></div>
@@ -1565,7 +1565,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-4-3" class="qvobject" style="width: 100%; height: 35px"></div>
@@ -1577,7 +1577,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-4-4" class="qvplaceholder" style="width: 100%; height: 35px"></div>
@@ -1838,8 +1838,8 @@
       <div class="tab-pane fade" id="pgAdvocate">
         <div class="container-fluid">
           <!--Filters-->
-          <div class="row" style="width: 80%; margin: 0px; padding: 0px">
-            <div class="col-xs-12 col-md-2">
+          <div class="row" style="margin: 0px; padding: 0px">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-27" class="qvobject" style="width: 100%; height: 35px"></div>
@@ -1851,7 +1851,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-28" class="qvobject" style="width: 100%; height: 35px"></div>
@@ -1863,7 +1863,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-29" class="qvobject" style="width: 100%; height: 35px"></div>
@@ -1875,7 +1875,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-30" class="qvobject" style="width: 100%; height: 35px"></div>
@@ -1887,7 +1887,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2">
+            <div class="col-xs-4 col-md-2">
               <div class="row">
                 <div class="col-xs-12">
                   <div id="QV-30aa" class="qvobject" style="width: 100%; height: 35px"></div>
@@ -2158,7 +2158,7 @@
                   <div class="col-xs-12 col-sm-5 title">
                     Understanding Customer Satisfaction
                   </div>
-                  <div class="col-xs-8 col-sm-6" style="padding: 12px">
+                  <div class="col-xs-12 col-sm-6" style="padding: 12px; display: flex; justify-content: flex-end;">
                     <div class="d-flex justify-content-end" style="height: 20px; text-align: center">
                       <div class="btn-group toggle" style="float: none" role="group" aria-label="Basic example">
                         <button type="button" id="selectAbsolute" class="btn btn-secondary btn-round">
