--- a/IndustryCompass.html
+++ b/IndustryCompass.html
@@ -354,7 +354,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2 col-lg-1 filter-container" >
+            <div class="col-xs-12 col-md-2 filter-container" >
 			        <div class="row">
                 <div class="col-xs-12 filter">
                   <div id="QV-clear-1" class="qvobject" style="height: 35px"></div>
@@ -362,12 +362,11 @@
               </div>
               <div class="row">
                 <div class="col-xs-12 filter">
-                  <div id="QV-refresh-1" class="qvobject" style="height: 35px;width: 110%;"></div>
+                  <div id="QV-refresh-1" class="qvobject" style="height: 35px;"></div>
                 </div>
               </div>
             </div>
           </div>
-  
 
           <div class="row">
             <div class="col-xs-12 col-md-4 margin-bottom">
@@ -780,7 +779,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2 col-lg-1 filter-container" >
+            <div class="col-xs-12 col-md-2 filter-container" >
               <div class="row">
                 <div class="col-xs-12 filter">
                   <div id="QV-clear-2" class="qvobject" style="height: 35px"></div>
@@ -788,7 +787,7 @@
               </div>
               <div class="row">
                 <div class="col-xs-12 filter">
-                  <div id="QV-refresh-2" class="qvobject" style="height: 35px;width: 110%;"></div>
+                  <div id="QV-refresh-2" class="qvobject" style="height: 35px;"></div>
                 </div>
               </div>
             </div>
@@ -1255,7 +1254,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2 col-lg-1 filter-container" >
+            <div class="col-xs-12 col-md-2 filter-container" >
               <div class="row">
                 <div class="col-xs-12 filter">
                   <div id="QV-clear-3" class="qvobject" style="height: 35px"></div>
@@ -1263,7 +1262,7 @@
               </div>
               <div class="row">
                 <div class="col-xs-12 filter">
-                  <div id="QV-refresh-3" class="qvobject" style="height: 35px;width: 110%;"></div>
+                  <div id="QV-refresh-3" class="qvobject" style="height: 35px;"></div>
                 </div>
               </div>
             </div>
@@ -1589,7 +1588,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2 col-lg-1 filter-container" >
+            <div class="col-xs-12 col-md-2 filter-container" >
               <div class="row">
                 <div class="col-xs-12 filter">
                   <div id="QV-clear-4" class="qvobject" style="height: 35px"></div>
@@ -1597,7 +1596,7 @@
               </div>
               <div class="row">
                 <div class="col-xs-12 filter">
-                  <div id="QV-refresh-4" class="qvobject" style="height: 35px;width: 110%;"></div>
+                  <div id="QV-refresh-4" class="qvobject" style="height: 35px;"></div>
                 </div>
               </div>
             </div>
@@ -1899,15 +1898,15 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2 col-lg-1 filter-container" ">
+            <div class="col-xs-12 col-md-2 filter-container">
               <div class="row">
                 <div class="col-xs-12 filter">
-                  <div id="QV-clear-5" class="qvobject" style="height: 35px"></div>
+                  <div id="QV-clear-5" class="qvobject" style="height: 35px;"></div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-xs-12 filter">
-                  <div id="QV-refresh-5" class="qvobject" style="height: 35px;width: 110%;"></div>
+                  <div id="QV-refresh-5" class="qvobject" style="height: 35px;"></div>
                 </div>
               </div>
             </div>
