--- a/IndustryCompass.html
+++ b/IndustryCompass.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script>
       function BtnClickSwitch(thisBtn, OtherBtn, leftBtn, rightBtn) {
-        OtherBtn.css("background-color", "");
+        OtherBtn.css("background-color", "white");
         OtherBtn.css("color", "");
         OtherBtn.css("z-index", "100");
         OtherBtn.css("border-radius", "20px");
