--- a/IndustryCompass.html
+++ b/IndustryCompass.html
@@ -424,7 +424,7 @@
                   </div>
                 </div>
                 <div class="row" style="height: 185px; padding: 0px; margin: 0px">
-                  <div class="col-xs-12" style="height: 185px; margin-top: -22px">
+                  <div class="col-xs-12 lineChart" style="height: 185px; margin-top: -22px">
                     <div class="with-title qvobject object" id="QV-1-5b1"></div>
                   </div>
                 </div>
@@ -432,7 +432,7 @@
                   <div class="col-xs-12 col-sm-9" style="height: 95px">
                     <div class="with-title qvobject" id="QV-1-5c1" style="margin-top: -6px"></div>
                   </div>
-                  <div class="col-xs-12 col-sm-3" style="
+                  <div class="col-xs-12 col-sm-3 lineChartLegend" style="
                       display: flex;
                       justify-content: felx-start;
                       height: 100%;
@@ -540,7 +540,7 @@
                   </div>
                 </div>
                 <div class="row" style="height: 185px; padding: 0px; margin: 0px">
-                  <div class="col-xs-12" style="height: 185px; margin-top: -22px">
+                  <div class="col-xs-12 lineChart" style="height: 185px; margin-top: -22px">
                     <div class="with-title qvobject object" id="QV-1-6b1"></div>
                   </div>
                 </div>
@@ -548,7 +548,7 @@
                   <div class="col-xs-12 col-sm-9" style="height: 95px">
                     <div class="with-title qvobject" id="QV-1-6c1" style="margin-top: -6px"></div>
                   </div>
-                  <div class="col-xs-3" style="
+                  <div class="col-xs-3 lineChartLegend" style="
                       height: 100%;
                       margin: 0px;
                       padding: 0px;
@@ -649,7 +649,7 @@
                   </div>
                 </div>
                 <div class="row" style="height: 185px; padding: 0px; margin: 0px">
-                  <div class="col-xs-12" style="height: 185px; margin-top: -22px">
+                  <div class="col-xs-12 lineChart" style="height: 185px; margin-top: -22px">
                     <div class="with-title qvobject object" id="QV-1-7b1"></div>
                   </div>
                 </div>
@@ -1803,7 +1803,7 @@
                   Understanding Visitor Spend
                 </div>
                 <div class="row">
-                  <div class="col-xs-12 col-md-7">
+                  <div class="col-xs-12 col-md-6">
                     <div class="margin-bottom" style="display: flex; justify-content: flex-end">
                       <div class="btn-group toggle" role="group" aria-label="Basic example" style="padding: 0 12px">
                         <button type="button" id="btnDrivers" class="btn btn-secondary btn-round btn-left">
@@ -1821,7 +1821,7 @@
                       <div class="qvobject" id="QV-4-9b"></div>
                     </div>
                   </div>
-                  <div class="col-xs-12 col-md-5">
+                  <div class="col-xs-12 col-md-6">
                     <div style="height: 400px">
                       <div class="qvobject" id="QV-4-8"></div>
                     </div>
