--- a/IndustryCompass.html
+++ b/IndustryCompass.html
@@ -1020,6 +1020,7 @@
                   </div>
                   <div class="col-xs-12 col-md-6">
                     <div class="d-flex justify-content-end" style="
+                      z-index: 1000;
                         text-align: right;
                         padding-right: 36px;
                         padding-bottom: 15px;
