--- a/IndustryCompass.html
+++ b/IndustryCompass.html
@@ -1165,7 +1165,7 @@
                         </div>
                       </div>
 
-                      <div class="row margin-bottom" style="padding: 0 12px">
+                      <div class="row" style="padding: 0 12px; margin-bottom: 12px;">
                         <div class="col-xs-12 title">Barriers to Consider</div>
                       </div>
                       <div class="row">
