--- a/IndustryCompass.html
+++ b/IndustryCompass.html
@@ -332,12 +332,12 @@
       <div id="navbarCollapse" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active">
-            <a data-toggle="pill" href="#pgTourismPerformance">Overview</a>
+            <a data-toggle="pill" href="#pgTourismPerformance" data-qcmd="pg1">Overview</a>
           </li>
-          <li><a data-toggle="pill" href="#pgInspire">Dream</a></li>
-          <li><a data-toggle="pill" href="#pgBook">Book</a></li>
-          <li><a data-toggle="pill" href="#pgSpend">Experience</a></li>
-          <li><a data-toggle="pill" href="#pgAdvocate">Share</a></li>
+          <li><a data-toggle="pill" href="#pgInspire" data-qcmd="pg2">Dream</a></li>
+          <li><a data-toggle="pill" href="#pgBook" data-qcmd="pg3">Book</a></li>
+          <li><a data-toggle="pill" href="#pgSpend" data-qcmd="pg4">Experience</a></li>
+          <li><a data-toggle="pill" href="#pgAdvocate" data-qcmd="pg5">Share</a></li>
         </ul>
       </div>
     </nav>
